--- a/LibAndroid/SlidingMenulibrary/project.properties
+++ b/LibAndroid/SlidingMenulibrary/project.properties
@@ -9,5 +9,5 @@
 
 android.library=true
 # Project target.
-target=Google Inc.:Google APIs:19
+target=Google Inc.:Google APIs (x86 System Image):19
 android.library.reference.1=../ActionBarlibrary
