--- a/DsEp/.classpath
+++ b/DsEp/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="common"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="dswork.ep"/>
+	<classpathentry kind="src" path="dswork.cms"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
