--- a/DsWorkNet/Dswork.Core/Dswork.Core.csproj
+++ b/DsWorkNet/Dswork.Core/Dswork.Core.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Mybaits\Dialect\LimitOffsetDialect.cs" />
     <Compile Include="Mybaits\Dialect\OracleDialect.cs" />
     <Compile Include="Mybaits\Dialect\SQLServer2012Dialect.cs" />
+    <Compile Include="Mybaits\Dialect\DB2Dialect.cs" />
+    <Compile Include="Mybaits\Dialect\SQLServerDialect.cs" />
     <Compile Include="Mybaits\OffsetLimitInterceptor.cs" />
     <Compile Include="Page\Page.cs" />
     <Compile Include="Page\PageNav.cs" />
