--- a/DsWorkAndroid/AndroidManifest.xml
+++ b/DsWorkAndroid/AndroidManifest.xml
@@ -5,14 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="13"
         android:targetSdkVersion="19" />
 
     <!-- 访问internet权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- 改变配置信息 -->
-    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" ></uses-permission>
 
     <!-- 测试 -->
     <instrumentation
