--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -4,3 +4,8 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
 jdbc.username=dswork
 jdbc.password=dswork
+
+
+email.smtp=
+email.account=
+email.password=
