--- a/DsEp/.classpath
+++ b/DsEp/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/MQAPI.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
