--- a/DsWorkJava/web/WEB-INF/web.xml
+++ b/DsWorkJava/web/WEB-INF/web.xml
@@ -69,31 +69,36 @@
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/config/log4j.properties</param-value>
 	</context-param>
+	<!-- 配置路径可用通配符，多个路径用,号分隔 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 	<listener>
 		<description>log4j</description>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
-	
-    <!-- Spring ApplicationContext 载入 -->
-    <listener>
+	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+	</listener>
 
 	<!-- 使Spring支持request与session的scope,如:<bean id="loginAction" class="com.foo.LoginAction" scope="request"/> -->
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-
-	<!-- Spring 刷新Introspector防止内存泄露 -->
-	<listener>
-		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-	</listener>
 	
-	<!-- Spring ApplicationContext配置文件的路径可使用通配符，多个路径用,号分隔，此参数用于后面的Spring-Context loader -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
-	</context-param>
+	<!-- Spring 视图层使用完后才关闭数据库连接，使用hibernate时需要 -->
+	<filter>
+        <filter-name>openSessionInViewFilter</filter-name>
+		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+	</filter>
+    <filter-mapping>
+    	<filter-name>openSessionInViewFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!-- SpringMVC 分派器及相关映射，需要在WEB-INF目录找到[servlet-name]-servlet.xml这个文件名-->
 	<servlet>
@@ -111,8 +116,6 @@
 		<servlet-name>springmvc</servlet-name>
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
-	
-	<!-- Spring 视图层使用完后才关闭数据库连接，使用hibernate时需要 -->
     
 	<error-page>
 		<error-code>403</error-code>
