--- a/DsCommon/config/config/log4j.properties
+++ b/DsCommon/config/config/log4j.properties
@@ -24,7 +24,7 @@ log4j.appender.logfile.threshold=ERROR
 # open source framework loggers
 ################################
 #spring
-log4j.logger.org.springframework=ERROR,logfile,stdout
+log4j.logger.org.springframework=ERROR,logfile
 log4j.logger.org.springframework.jdbc.core.JdbcTemplate=WARN,logfile
 log4j.logger.org.springframework.web.servlet.PageNotFound=INFO,logfile
 
@@ -37,7 +37,7 @@ log4j.logger.org.hibernate=OFF
 #log4j.logger.org.hibernate.cache=ERROR,logfile
 
 log4j.logger.jdbc.connection=OFF
-log4j.logger.jdbc.sqlonly=DEBUG,logfile,stdout
+log4j.logger.jdbc.sqlonly=DEBUG,logfile
 log4j.logger.jdbc.sqltiming=OFF
 log4j.logger.jdbc.resultset=OFF
 log4j.logger.jdbc.audit=OFF
