--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -12,8 +12,8 @@
 	<classpathentry kind="src" path="dswork.ognl"/>
 	<classpathentry kind="src" path="dswork.spring"/>
 	<classpathentry kind="src" path="dswork.web"/>
-	<classpathentry kind="src" path="log4jdbc_spy"/>
 	<classpathentry kind="src" path="org.hibernate.dialect"/>
+	<classpathentry kind="src" path="dswork.jdbc3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
