--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -1,4 +1,6 @@
 ######## jdbc
+jdbc.driverClassName=dswork.jdbc.DriverSpy
+
 mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
