--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -13,6 +13,4 @@ email.account=
 email.password=
 
 
-gov.xzsp.path=C:/DC_CLIENT
-gov.xzsp.12=gz
-gov.xzsp.34=36
+gov.xzsp.lxhurl=http://192.168.1.47:8070/xzsp/lsh.jsp
