--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -1,7 +1,6 @@
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
-
-mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
+jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
 jdbc.username=dswork
 jdbc.password=dswork
