--- a/DsWorkJava/dswork.config/config/config.properties
+++ b/DsWorkJava/dswork.config/config/config.properties
@@ -1,7 +1,7 @@
 ######## jdbc
-hibernate.dialect=org.hibernate.dialect.SQLiteDialect
-mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.driverClassName=org.sqlite.JDBC
+jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
+jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:sqlite:../webapps/DsWorkJava/WEB-INF/classes/db
 jdbc.username=demo
 jdbc.password=demo
