--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -1,8 +1,6 @@
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
-
-mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
 jdbc.username=dswork
 jdbc.password=dswork
