--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -4,3 +4,12 @@ jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
 jdbc.username=dswork
 jdbc.password=dswork
+
+dswork.cas.webservice=http://sso:8080/CasServer/ws/DsworkCasService
+dswork.cas.system.refresh=3600000
+dswork.cas.system.alias=DsCommon
+dswork.cas.system.password=1
+dswork.cas.page.noAccess=/noAccess.jsp
+dswork.cas.page.ignore=/menu.jsp,/m.jsp,/index.jsp,/manage/login.htm
+dswork.cas.check.fix=jsp,htm
+dswork.cas.check.param=true
