--- a/DsCommon/config/config/log4j.properties
+++ b/DsCommon/config/config/log4j.properties
@@ -37,7 +37,7 @@ log4j.logger.org.hibernate=OFF
 #log4j.logger.org.hibernate.cache=ERROR,logfile
 
 log4j.logger.jdbc.connection=OFF
-log4j.logger.jdbc.sqlonly=DEBUG,logfile
+log4j.logger.jdbc.sqlonly=INFO,logfile
 log4j.logger.jdbc.sqltiming=OFF
 log4j.logger.jdbc.resultset=OFF
 log4j.logger.jdbc.audit=OFF
