--- a/LibAndroid/DsWorkAndroidLib-core/.classpath
+++ b/LibAndroid/DsWorkAndroidLib-core/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ANDROID_TOOL"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v7-recyclerview.jar"/>
 	<classpathentry kind="lib" path="libs/volley.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
