--- a/LibAndroid/DsWorkAndroidLib-view-v40/project.properties
+++ b/LibAndroid/DsWorkAndroidLib-view-v40/project.properties
@@ -13,6 +13,7 @@
 # Project target.
 target=android-20
 android.library=true
-android.library.reference.1=../ActionBarlibrary
-android.library.reference.2=../SlidingMenulibrary
-android.library.reference.3=../PullToRefreshlibrary
+android.library.reference.1=..\\ActionBarlibrary
+android.library.reference.2=..\\SlidingMenulibrary
+android.library.reference.3=..\\PullToRefreshlibrary
+android.library.reference.4=..\\DsWorkAndroidLib-view-base
