--- a/LibAndroid/DsWorkAndroidLib-core/.classpath
+++ b/LibAndroid/DsWorkAndroidLib-core/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v7-recyclerview.jar"/>
 	<classpathentry kind="lib" path="libs/volley.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
