--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -4,12 +4,13 @@
 	<classpathentry kind="src" path="common"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="dswork.common.dict"/>
+	<classpathentry kind="src" path="dswork.common.flow"/>
 	<classpathentry kind="src" path="dswork.common.rbac"/>
 	<classpathentry kind="src" path="dswork.common.org"/>
 	<classpathentry kind="src" path="dswork.common.org.role"/>
 	<classpathentry kind="src" path="dswork.common.user"/>
 	<classpathentry kind="src" path="dswork.common.user.org"/>
-	<classpathentry kind="src" path="dswork.common.flow"/>
+	<classpathentry kind="src" path="dswork.common.user.role"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
