--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -1,7 +1,7 @@
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8
 jdbc.username=dswork
 jdbc.password=dswork
 
