--- a/xzsp/src/config/config.properties
+++ b/xzsp/src/config/config.properties
@@ -2,8 +2,7 @@
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8
 jdbc.username=dswork
 jdbc.password=dswork
 
