--- a/DsEp/.classpath
+++ b/DsEp/.classpath
@@ -5,6 +5,8 @@
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="dswork.ep"/>
 	<classpathentry kind="src" path="dswork.person"/>
+	<classpathentry kind="src" path="dswork.cms"/>
+	<classpathentry kind="src" path="dswork.bbs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
