--- a/xzsp/.classpath
+++ b/xzsp/.classpath
@@ -13,5 +13,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/MQAPI.jar"/>
-	<classpathentry kind="output" path="web/WEB-INF/clesses"/>
+	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
