--- a/xzsp/src/config/log4j.properties
+++ b/xzsp/src/config/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern= %-d{yyyy-MM-dd HH:mm:ss,SSS} [%p] %c - %m%n
 log4j.appender.logfile.DatePattern=yyyy-MM-dd'.txt'
-log4j.appender.logfile.file=/LogSpace/DsEp.log
+log4j.appender.logfile.file=/LogSpace/DsXzsp.log
 log4j.appender.logfile.append=true
 log4j.appender.logfile.threshold=ERROR
 #log4j.appender.logfile.MaxFileSize=2048KB
