--- a/xzsp/.classpath
+++ b/xzsp/.classpath
@@ -22,7 +22,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/module/gson/gson-2.3.1.jar">
+	<classpathentry kind="lib" path="lib/fastjson-1.2.4.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
