--- a/DsWorkAndroid/App/paper/AndroidManifest.xml
+++ b/DsWorkAndroid/App/paper/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <!-- permission: -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +20,8 @@
             android:name=".view.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" 
-        	android:theme="@style/Theme.AppCompat.NoActionBar">
+        	android:theme="@style/My.Theme.AppCompat.NoActionBar"
+            android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +31,7 @@
         <activity
             android:name="com.paper.view.ImageViewPagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/MyActivityTheme">
+            android:theme="@style/My.Theme.AppCompat.NoActionBar">
         </activity>
     </application>
 
