--- a/DsWorkJava/dswork.config/config/config.properties
+++ b/DsWorkJava/dswork.config/config/config.properties
@@ -1,5 +1,5 @@
 ######## jdbc
-jdbc.driverClassName=org.sqlite.JDBC
+jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:sqlite:../webapps/DsWorkJava/WEB-INF/classes/db
