--- a/DsWorkJava/web/WEB-INF/web.xml
+++ b/DsWorkJava/web/WEB-INF/web.xml
@@ -29,37 +29,21 @@
 		WebLogic："FileServlet"
 		WebSphere："SimpleFileServlet"
 	-->
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.css</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.gif</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.htc</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.html</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.jpg</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.js</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.png</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.swf</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.xml</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name><url-pattern>*.json</url-pattern>
-	</servlet-mapping>
-	
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.bmp</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.css</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.doc</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.gif</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.htc</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.html</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.jpeg</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.jpg</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.js</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.json</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.png</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.swf</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xap</url-pattern></servlet-mapping>
+	<servlet-mapping><servlet-name>default</servlet-name><url-pattern>*.xml</url-pattern></servlet-mapping>
+	<!--
 	<context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>web.root.testwork</param-value>
@@ -68,6 +52,15 @@
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/config/log4j.properties</param-value>
 	</context-param>
+	-->
+	<context-param>
+		<param-name>log4jConfiguration</param-name>
+		<param-value>classpath:config/log4j2.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
+	</listener>
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
@@ -75,10 +68,12 @@
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
+	<!--
 	<listener>
 		<description>log4j</description>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
+	-->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
