--- a/DsWorkNet/TestWork/Config/properties.config
+++ b/DsWorkNet/TestWork/Config/properties.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <settings>
-	<add key="connectionString" value="Data Source=|DataDirectory|/db;Version=3;"/>
-	<!--jskeyupload-->
-	<add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
-	<!--jskey.upload.maxSize=bit-->
-	<add key="jskey.upload.maxSize" value="10485760"/>
-	<!--jskey.upload.timeout=millisecond-->
-	<add key="jskey.upload.timeout" value="3600000"/>
-	<add key="jskey.upload.image" value="jpg,jpeg,gif,png"/>
-	<add key="jskey.upload.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
+  <!--jskeyupload-->
+  <add key="jskey.upload.init" value="true"/>
+  <add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
+  <!--jskey.upload.maxSize=bit-->
+  <add key="jskey.upload.maxSize" value="10485760"/>
+  <!--jskey.upload.timeout=millisecond-->
+  <add key="jskey.upload.timeout" value="3600000"/>
+  <add key="jskey.upload.image" value="jpg,jpeg,gif,png"/>
+  <add key="jskey.upload.file" value="bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z"/>
 </settings>
 <!--
 SQLite3 : "Data Source=|DataDirectory|/db;Version=3;"#UTF8Encoding=True; #UseUTF16Encoding=True;
