--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -16,6 +16,7 @@ jdbc.password=demo
 #mybatis.dialect=dswork.core.mybatis.dialect.OracleDialect
 #jdbc.driverClassName=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:db
+#jdbc:oracle:thin:@(description=(  address_list=(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(load_balance=ON)(failover=ON)  )(connect_data=(service_name=db))) 
 #jdbc.username=UserId
 #jdbc.password=Password
 
