--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -11,4 +11,5 @@ email.account=
 email.password=
 
 
-gov.xzsp.lxhurl=http://192.168.1.47:8070/xzsp/lsh.jsp
+gov.xzsp.lxhurl=http://192.168.1.47:8080/xzsp/lsh.jsp
+gov.xzsp.sendurl=http://192.168.1.47:8080/xzsp/send.jsp
