--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -5,7 +5,7 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8
 jdbc.username=dswork
 jdbc.password=dswork
 
-dswork.cas.webservice=http://sso:8080/CasServer/ws/DsworkCasService
+dswork.cas.api=http://127.0.0.1:8888/CasServer/api
 dswork.cas.system.refresh=3600000
 dswork.cas.system.alias=DsCommon
 dswork.cas.system.password=1
