--- a/DsWorkNet/Dswork.Http/Dswork.Http.csproj
+++ b/DsWorkNet/Dswork.Http/Dswork.Http.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F9036EC1-92C0-443F-BB12-08E153F3601D}</ProjectGuid>
+    <ProjectGuid>{7FA5246C-A9A0-4335-8B5D-DBAB40B4EEF8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dswork.Mvc</RootNamespace>
-    <AssemblyName>Dswork.Mvc</AssemblyName>
+    <RootNamespace>Dswork.Http</RootNamespace>
+    <AssemblyName>Dswork.Http</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,25 +34,20 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseController.cs" />
+    <Compile Include="HttpUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dswork.Core\Dswork.Core.csproj">
-      <Project>{55962767-6cb2-464e-ae66-cb678d7dd4a7}</Project>
-      <Name>Dswork.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dswork.Web\Dswork.Web.csproj">
-      <Project>{1dbef8b6-6ff7-4c5a-affd-7b7bb90205ce}</Project>
-      <Name>Dswork.Web</Name>
-    </ProjectReference>
+    <Compile Include="NameValue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Cookie.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="HttpCommon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
