--- a/DsWorkNet/Dswork.Core/Dswork.Core.csproj
+++ b/DsWorkNet/Dswork.Core/Dswork.Core.csproj
@@ -65,9 +65,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Db\BaseDao.cs" />
