--- a/DsWorkNet/TestWork/Config/properties.config
+++ b/DsWorkNet/TestWork/Config/properties.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <settings>
+  <add key="connectionString" value="Data Source=|DataDirectory|/db;Version=3;"/>
   <!--jskeyupload-->
   <add key="jskey.upload.init" value="true"/>
   <add key="jskey.upload.savePath" value="C:/DsworkUploadTemp"/>
