--- a/web/src/config/config.properties
+++ b/web/src/config/config.properties
@@ -1,9 +1,11 @@
 ######## jskeyupload
-jskey.upload.init=true
 jskey.upload.savePath=C:/DsworkUploadTemp
 #jskey.upload.maxSize=bit
 jskey.upload.maxSize=10485760
-#jskey.upload.timeout=millisecond
-jskey.upload.timeout=3600000
 jskey.upload.image=jpg,jpeg,gif,png
 jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
+
+
+######## web project config
+jskey.upload.clear=true
+jskey.upload.timeout=21600000
