--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -19,8 +19,10 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.OracleDialect
 #mybatis.dialect=dswork.core.mybatis.dialect.OracleDialect
 #jdbc.driverClassName=oracle.jdbc.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:db
-#jdbc:oracle:thin:@(description=(  address_list=(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(load_balance=ON)(failover=ON)  )(connect_data=(service_name=db))) 
+#jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:sid
+#jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521/service_name
+#jdbc.url=jdbc:oracle:thin:@//127.0.0.1:1521/service_name
+#jdbc.url=jdbc:oracle:thin:@(description=(  address_list=(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(address=(host=127.0.0.1)(protocol=tcp)(port=1521))(load_balance=ON)(failover=ON)  )(connect_data=(service_name=db))) 
 #jdbc.username=UserId
 #jdbc.password=Password
 
