--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -4,7 +4,7 @@ jdbc.driverClassName=dswork.jdbc.DriverSpy
 
 jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.url=jdbc:sqlite:../webapps/DemoJava/WEB-INF/classes/db
+jdbc.url=jdbc:sqlite::resource:db
 jdbc.username=demo
 jdbc.password=demo
 
@@ -30,7 +30,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #hibernate.dialect=org.hibernate.dialect.SQLiteDialect
 #mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 #jdbc.driverClassName=org.sqlite.JDBC
-#jdbc.url=jdbc:sqlite:../webapps/[project]/WEB-INF/classes/db
+#jdbc.url=jdbc:sqlite::resource:db
 #jdbc.username=UserId
 #jdbc.password=Password
 
