--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -31,6 +31,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
 #jdbc.driverClassName=org.sqlite.JDBC
 #jdbc.url=jdbc:sqlite::resource:db
+#jdbc.url=jdbc:sqlite:../webapps/[project]/WEB-INF/classes/db
 #jdbc.username=UserId
 #jdbc.password=Password
 
