--- a/xzsp/src/config/config.properties
+++ b/xzsp/src/config/config.properties
@@ -13,4 +13,8 @@ gov.xzsp.step=100
 gov.xzsp.12=gz
 gov.xzsp.34=36
 
-gov.xzsp.time=30000
+gov.xzsp.time=36000000
+#30000=30s
+#60000=1m
+#3600000=1H
+#86400000=1d
