--- a/DsCas/CasClient/web/WEB-INF/web.xml
+++ b/DsCas/CasClient/web/WEB-INF/web.xml
@@ -16,8 +16,16 @@
 		<filter-name>sso</filter-name>
 		<filter-class>dswork.cas.CasFilter</filter-class>
 		<init-param>
-			<param-name>validateURL</param-name>
-			<param-value>http://127.0.0.1:8888/CasServer/validate.htm</param-value>
+			<param-name>ssoURL</param-name>
+			<param-value>http://127.0.0.1:8888/CasServer/api</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ssoName</param-name>
+			<param-value>CasClient</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ssoPassword</param-name>
+			<param-value>1</param-value>
 		</init-param>
 		<init-param>
 			<param-name>loginURL</param-name>
@@ -44,6 +52,26 @@
 	<filter>
 		<filter-name>DsworkCasAuthFilter</filter-name>
 		<filter-class>dswork.cas.AuthFilter</filter-class>
+		<init-param>
+			<param-name>refreshTime</param-name>
+			<param-value>3600000</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forbiddenPage</param-name>
+			<param-value>/casNoAccess.jsp</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ignorePage</param-name>
+			<param-value>/menu.jsp,/m.jsp,/index.jsp,/manage/login.htm</param-value>
+		</init-param>
+		<init-param>
+			<param-name>fixSuffix</param-name>
+			<param-value>jsp,htm</param-value>
+		</init-param>
+		<init-param>
+			<param-name>checkParam</param-name>
+			<param-value>false</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>DsworkCasAuthFilter</filter-name>
