--- a/DsCas/portal/.classpath
+++ b/DsCas/portal/.classpath
@@ -42,7 +42,15 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dswork.cas.authfilter.jar"/>
-	<classpathentry kind="lib" path="lib/dswork.cas.jar"/>
+	<classpathentry kind="lib" path="lib/dswork.cas.authfilter.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/dswork.cas.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
