--- a/DsCas/portal/web/WEB-INF/web.xml
+++ b/DsCas/portal/web/WEB-INF/web.xml
@@ -33,16 +33,24 @@
 		<filter-name>sso</filter-name>
 		<filter-class>dswork.cas.CasFilter</filter-class>
 		<init-param>
-			<param-name>validateURL</param-name><!-- 获取用户账号URL，用于服务器间的ip -->
-			<param-value>http://127.0.0.1:8888/CasServer/validate.htm</param-value>
+			<param-name>ssoURL</param-name>
+			<param-value>http://127.0.0.1:8888/CasServer/api</param-value>
 		</init-param>
 		<init-param>
-			<param-name>loginURL</param-name><!-- 登录页面 -->
-			<param-value>http://sso:8888/CasServer/login.htm</param-value>
+			<param-name>ssoName</param-name>
+			<param-value>CasClient</param-value>
 		</init-param>
 		<init-param>
-			<param-name>ignoreURL</param-name><!-- 过滤页面 -->
-			<param-value>/menu.jsp,/logout.jsp</param-value>
+			<param-name>ssoPassword</param-name>
+			<param-value>1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>loginURL</param-name>
+			<param-value>http://sso:8888/CasServer/login</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ignoreURL</param-name>
+			<param-value>/menu.jsp,/m.jsp</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
