--- a/DsCas/CasClient/web/WEB-INF/web.xml
+++ b/DsCas/CasClient/web/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 		</init-param>
 		<init-param>
 			<param-name>loginURL</param-name>
-			<param-value>http://sso:8888/CasServer/login.htm</param-value>
+			<param-value>http://sso:8888/CasServer/login</param-value>
 		</init-param>
 		<init-param>
 			<param-name>ignoreURL</param-name>
