--- a/DsCas/CasServer/web/WEB-INF/web.xml
+++ b/DsCas/CasServer/web/WEB-INF/web.xml
@@ -74,7 +74,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>xxx</servlet-name>
-		<url-pattern>/AuthCode</url-pattern>
+		<url-pattern>/authcode</url-pattern>
 	</servlet-mapping>
 	
 	<session-config>
