--- a/DsCas/CasServer/web/WEB-INF/web.xml
+++ b/DsCas/CasServer/web/WEB-INF/web.xml
@@ -49,10 +49,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
@@ -65,7 +61,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/index</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 	
 	<servlet>
@@ -81,6 +77,6 @@
 		<session-timeout>120</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>login.htm</welcome-file>
+		<welcome-file>login</welcome-file>
 	</welcome-file-list>
 </web-app>
