--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -31,12 +31,12 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dswork.cas.authfilter.jar">
+	<classpathentry kind="lib" path="lib/dswork.sso.authfilter.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dswork.cas.jar">
+	<classpathentry kind="lib" path="lib/dswork.sso.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
