--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -49,34 +49,34 @@
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
 	
-			<filter>
-			<filter-name>sso</filter-name>
-			<filter-class>dswork.cas.CasFilter</filter-class>
-			<init-param>
-				<param-name>ssoURL</param-name>
-				<param-value>http://127.0.0.1:8888/CasServer/api</param-value>
-			</init-param>
-			<init-param>
-				<param-name>ssoName</param-name>
-				<param-value>DsCommon</param-value>
-			</init-param>
-			<init-param>
-				<param-name>ssoPassword</param-name>
-				<param-value>1</param-value>
-			</init-param>
-			<init-param>
-				<param-name>loginURL</param-name>
-				<param-value>http://sso:8888/CasServer/login</param-value>
-			</init-param>
-			<init-param>
-				<param-name>ignoreURL</param-name>
-				<param-value>/menu.jsp,/m.jsp</param-value>
-			</init-param>
-		</filter>
-		<filter-mapping>
-			<filter-name>sso</filter-name>
-			<url-pattern>/null/*</url-pattern>
-		</filter-mapping>
+	<filter>
+		<filter-name>sso</filter-name>
+		<filter-class>dswork.sso.SSOFilter</filter-class>
+		<init-param>
+			<param-name>ssoURL</param-name>
+			<param-value>http://127.0.0.1:8888/sso/api</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ssoName</param-name>
+			<param-value>DsCommon</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ssoPassword</param-name>
+			<param-value>1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>loginURL</param-name>
+			<param-value>http://sso-server:8888/sso/login</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ignoreURL</param-name>
+			<param-value>/menu.jsp,/m.jsp</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>sso</filter-name>
+		<url-pattern>/null/*</url-pattern>
+	</filter-mapping>
 
 	<error-page>
 		<error-code>403</error-code>
