--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -21,3 +21,7 @@ jskey.upload.savePath=C:/DsworkUploadTemp
 jskey.upload.maxSize=10485760
 jskey.upload.image=jpg,jpeg,gif,png
 jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
+
+
+dswork.id.size=10
+dswork.id.code=1
